--- a/style.css
+++ b/style.css
@@ -2787,7 +2787,6 @@ body#pagina-login {
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 800px;
-    min-width: 350px;
     text-align: center;
 }
 
